feat: 优化SingleEntity